# coding-game-2024

./: .pre-commit-config.yaml  README.md  challenge.py  game.txt  model.txt  origin.py  pyproject.toml
data/: game.txt  game2.txt  game3.txt  round.txt
